--- a/index.html
+++ b/index.html
@@ -8,149 +8,231 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
-    <!-- Bootstrap 5.3 local  - totalmente moderno e atualizado! -->
+    <!-- Bootstrap 5.3 -->
     <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <!-- CSS local (Nosso) -->
+    <!-- CSS local -->
     <link rel="stylesheet" href="css/style.css" />
-    <!-- Bootstrap JS com parametro defer, que permite a execução js após o carregamento DOM -->
-    <script src="js/bootstrap.min.js" defer></script>
     <script src="js/bootstrap.bundle.min.js" defer></script>
     <title>King of Kings</title>
   </head>
   <body>
+    <!-- CABEÇALHO -->
     <header>
-      <!-- começa o cabeçalho  -->
-      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <nav class="navbar navbar-expand-lg bg-body-tertiary shadow-sm">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
+          <!-- LOGO (IMAGEM) -->
+          <a class="navbar-brand" href="#">
+            <img src="images/logo.png" alt="Logo Loja" width="120" />
+          </a>
+
+          <!-- BOTÃO RESPONSIVO -->
           <button
             class="navbar-toggler"
             type="button"
             data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent"
+            data-bs-target="#navbarContent"
+            aria-controls="navbarContent"
             aria-expanded="false"
             aria-label="Toggle navigation"
           >
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
+          <!-- MENU CENTRALIZADO -->
+          <div class="collapse navbar-collapse justify-content-center" id="navbarContent">
+            <ul class="navbar-nav mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" href="#">Início</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a
-                  class="nav-link dropdown-toggle"
-                  href="#"
-                  role="button"
-                  data-bs-toggle="dropdown"
-                  aria-expanded="false"
-                >
-                  Dropdown
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider" /></li>
-                  <li>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                  </li>
-                </ul>
+                <a class="nav-link" href="#">Masculino</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                <a class="nav-link" href="#">Feminino</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Infantil</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Promoções</a>
               </li>
             </ul>
+          </div>
+
+          <!-- CARRINHO + PESQUISA -->
+          <div class="d-flex align-items-center">
+            <a href="#" class="btn btn-outline-dark me-2">
+              <i class="bi bi-cart3"></i> Carrinho
+            </a>
             <form class="d-flex" role="search">
               <input
                 class="form-control me-2"
                 type="search"
-                placeholder="Search"
+                placeholder="Buscar produtos..."
                 aria-label="Search"
               />
               <button class="btn btn-outline-success" type="submit">
-                Search
+                <i class="bi bi-search"></i>
               </button>
             </form>
           </div>
         </div>
       </nav>
     </header>
-    <!-- termina o cabeçalho -->
 
-    <!-- ------------------------------------------------------ -->
-
-    <!-- inicia o conteudo -->
-    <main class="container">
-      <section>
-        <!-- Carousel -->
-        <div
-          id="carouselExampleAutoplaying"
-          class="carousel slide"
-          data-bs-ride="carousel"
-        >
+    <!-- CONTEÚDO -->
+    <main class="container my-4">
+      <!-- CARROSSEL -->
+      <section class="mb-5">
+        <div id="carouselLoja" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="images/bannerLJ1.png" class="d-block w-100" alt="..." />
+              <img src="images/bannerLJ1.png" class="d-block w-100" alt="Banner 1" />
             </div>
             <div class="carousel-item">
-              <img src="images/bannerLJ2.png" class="d-block w-100" alt="..." />
+              <img src="images/bannerLJ2.png" class="d-block w-100" alt="Banner 2" />
             </div>
             <div class="carousel-item">
-              <img src="images/banner3.png" class="d-block w-100" alt="..." />
+              <img src="images/banner3.png" class="d-block w-100" alt="Banner 3" />
             </div>
           </div>
-          <button
-            class="carousel-control-prev"
-            type="button"
-            data-bs-target="#carouselExampleAutoplaying"
-            data-bs-slide="prev"
-          >
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselLoja" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon"></span>
           </button>
-          <button
-            class="carousel-control-next"
-            type="button"
-            data-bs-target="#carouselExampleAutoplaying"
-            data-bs-slide="next"
-          >
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselLoja" data-bs-slide="next">
+            <span class="carousel-control-next-icon"></span>
           </button>
         </div>
       </section>
 
-      produtos em destque
+      <!-- PRODUTOS EM DESTAQUE -->
+      <section class="my-5">
+  <h2 class="text-center mb-4"> Produtos em Destaque</h2>
+
+  <div id="carouselProdutos" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+
+      <!-- PRIMEIRO SLIDE -->
+      <div class="carousel-item active">
+        <div class="row row-cols-1 row-cols-md-4 g-4">
+          <!-- CARD 1 -->
+          <div class="col">
+            <div class="card h-100 shadow-sm">
+              <img src="images/produto1.jpg" class="card-img-top" alt="Produto 1" />
+              <div class="card-body text-center">
+                <h5 class="card-title">Tênis Nike</h5>
+                <p class="fw-bold text-success">R$ 299,90</p>
+                <button class="btn btn-primary"><i class="bi bi-cart-plus"></i> Comprar</button>
+              </div>
+            </div>
+          </div>
+          <!-- CARD 2 -->
+          <div class="col">
+            <div class="card h-100 shadow-sm">
+              <img src="images/produto2.jpg" class="card-img-top" alt="Produto 2" />
+              <div class="card-body text-center">
+                <h5 class="card-title">Camiseta Adidas</h5>
+                <p class="fw-bold text-success">R$ 119,90</p>
+                <button class="btn btn-primary"><i class="bi bi-cart-plus"></i> Comprar</button>
+              </div>
+            </div>
+          </div>
+          <!-- CARD 3 -->
+          <div class="col">
+            <div class="card h-100 shadow-sm">
+              <img src="images/produto3.jpg" class="card-img-top" alt="Produto 3" />
+              <div class="card-body text-center">
+                <h5 class="card-title">Relógio Casio</h5>
+                <p class="fw-bold text-success">R$ 499,90</p>
+                <button class="btn btn-primary"><i class="bi bi-cart-plus"></i> Comprar</button>
+              </div>
+            </div>
+          </div>
+          <!-- CARD 4 -->
+          <div class="col">
+            <div class="card h-100 shadow-sm">
+              <img src="images/produto4.jpg" class="card-img-top" alt="Produto 4" />
+              <div class="card-body text-center">
+                <h5 class="card-title">Bolsa Couro</h5>
+                <p class="fw-bold text-success">R$ 359,90</p>
+                <button class="btn btn-primary"><i class="bi bi-cart-plus"></i> Comprar</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- SEGUNDO SLIDE -->
+      <div class="carousel-item">
+        <div class="row row-cols-1 row-cols-md-4 g-4">
+          <!-- CARD 5 -->
+          <div class="col">
+            <div class="card h-100 shadow-sm">
+              <img src="images/produto5.jpg" class="card-img-top" alt="Produto 5" />
+              <div class="card-body text-center">
+                <h5 class="card-title">Jaqueta Jeans</h5>
+                <p class="fw-bold text-success">R$ 249,90</p>
+                <button class="btn btn-primary"><i class="bi bi-cart-plus"></i> Comprar</button>
+              </div>
+            </div>
+          </div>
+          <!-- CARD 6 -->
+          <div class="col">
+            <div class="card h-100 shadow-sm">
+              <img src="images/produto6.jpg" class="card-img-top" alt="Produto 6" />
+              <div class="card-body text-center">
+                <h5 class="card-title">Óculos RayBan</h5>
+                <p class="fw-bold text-success">R$ 699,90</p>
+                <button class="btn btn-primary"><i class="bi bi-cart-plus"></i> Comprar</button>
+              </div>
+            </div>
+          </div>
+          <!-- CARD 7 -->
+          <div class="col">
+            <div class="card h-100 shadow-sm">
+              <img src="images/produto7.jpg" class="card-img-top" alt="Produto 7" />
+              <div class="card-body text-center">
+                <h5 class="card-title">Fone Bluetooth</h5>
+                <p class="fw-bold text-success">R$ 199,90</p>
+                <button class="btn btn-primary"><i class="bi bi-cart-plus"></i> Comprar</button>
+              </div>
+            </div>
+          </div>
+          <!-- CARD 8 -->
+          <div class="col">
+            <div class="card h-100 shadow-sm">
+              <img src="images/produto8.jpg" class="card-img-top" alt="Produto 8" />
+              <div class="card-body text-center">
+                <h5 class="card-title">Smartwatch</h5>
+                <p class="fw-bold text-success">R$ 899,90</p>
+                <button class="btn btn-primary"><i class="bi bi-cart-plus"></i> Comprar</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+    <!-- CONTROLES -->
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselProdutos" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon"></span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselProdutos" data-bs-slide="next">
+      <span class="carousel-control-next-icon"></span>
+    </button>
+  </div>
+</section>
     </main>
-    <!-- termina o conteudo  -->
 
-    <!-- ----------------------------------------------------- -->
-
-    <footer
-      class="container-fluid ps-4 bg-dark text-white p-4 rounded-top"
-      id="CONTATO"
-    >
-      <!-- inicia o rodape -->
-      <div
-        class="col-12 text-center center border-top border-secondary pt-3 mt-3"
-      >
-        <p class="text-white-50">
-          Desenvolvido por Erik Carvalho da Silva™ 2025
-        </p>
-        <br />
-        <a
-          href="https://github.com/ErikCarvalho1?tab=repositories"
-          class="text-white"
-          >ErikCarvalho.com.br</a
-        >
-        <!-- final linha fechmento rodapé -->
+    <!-- RODAPÉ -->
+    <footer class="container-fluid bg-dark text-white p-4 mt-5">
+      <div class="text-center">
+        <p class="mb-1">Desenvolvido por Erik Carvalho da Silva™ 2025</p>
+        <a href="https://github.com/ErikCarvalho1?tab=repositories" class="text-white-50">
+          ErikCarvalho.com.br
+        </a>
       </div>
     </footer>
-    <!-- termina o rodape -->
   </body>
 </html>
