--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <div class="card h-100 shadow-sm">
               <img src="images/produto1.jpg" class="card-img-top" alt="Produto 1" />
               <div class="card-body text-center">
-                <h5 class="card-title">Tênis Nike</h5>
+                <h5 class="card-title">Produto</h5>
                 <p class="fw-bold text-success">R$ 299,90</p>
                 <button class="btn btn-primary"><i class="bi bi-cart-plus"></i> Comprar</button>
               </div>
@@ -131,7 +131,7 @@
             <div class="card h-100 shadow-sm">
               <img src="images/produto2.jpg" class="card-img-top" alt="Produto 2" />
               <div class="card-body text-center">
-                <h5 class="card-title">Camiseta Adidas</h5>
+                <h5 class="card-title">Produto</h5>
                 <p class="fw-bold text-success">R$ 119,90</p>
                 <button class="btn btn-primary"><i class="bi bi-cart-plus"></i> Comprar</button>
               </div>
@@ -142,7 +142,7 @@
             <div class="card h-100 shadow-sm">
               <img src="images/produto3.jpg" class="card-img-top" alt="Produto 3" />
               <div class="card-body text-center">
-                <h5 class="card-title">Relógio Casio</h5>
+                <h5 class="card-title">Produto</h5>
                 <p class="fw-bold text-success">R$ 499,90</p>
                 <button class="btn btn-primary"><i class="bi bi-cart-plus"></i> Comprar</button>
               </div>
@@ -153,7 +153,7 @@
             <div class="card h-100 shadow-sm">
               <img src="images/produto4.jpg" class="card-img-top" alt="Produto 4" />
               <div class="card-body text-center">
-                <h5 class="card-title">Bolsa Couro</h5>
+                <h5 class="card-title">Produto</h5>
                 <p class="fw-bold text-success">R$ 359,90</p>
                 <button class="btn btn-primary"><i class="bi bi-cart-plus"></i> Comprar</button>
               </div>
@@ -170,7 +170,7 @@
             <div class="card h-100 shadow-sm">
               <img src="images/produto5.jpg" class="card-img-top" alt="Produto 5" />
               <div class="card-body text-center">
-                <h5 class="card-title">Jaqueta Jeans</h5>
+                <h5 class="card-title">Produto</h5>
                 <p class="fw-bold text-success">R$ 249,90</p>
                 <button class="btn btn-primary"><i class="bi bi-cart-plus"></i> Comprar</button>
               </div>
@@ -181,7 +181,7 @@
             <div class="card h-100 shadow-sm">
               <img src="images/produto6.jpg" class="card-img-top" alt="Produto 6" />
               <div class="card-body text-center">
-                <h5 class="card-title">Óculos RayBan</h5>
+                <h5 class="card-title">Produto</h5>
                 <p class="fw-bold text-success">R$ 699,90</p>
                 <button class="btn btn-primary"><i class="bi bi-cart-plus"></i> Comprar</button>
               </div>
@@ -192,7 +192,7 @@
             <div class="card h-100 shadow-sm">
               <img src="images/produto7.jpg" class="card-img-top" alt="Produto 7" />
               <div class="card-body text-center">
-                <h5 class="card-title">Fone Bluetooth</h5>
+                <h5 class="card-title">Produto</h5>
                 <p class="fw-bold text-success">R$ 199,90</p>
                 <button class="btn btn-primary"><i class="bi bi-cart-plus"></i> Comprar</button>
               </div>
@@ -203,7 +203,7 @@
             <div class="card h-100 shadow-sm">
               <img src="images/produto8.jpg" class="card-img-top" alt="Produto 8" />
               <div class="card-body text-center">
-                <h5 class="card-title">Smartwatch</h5>
+                <h5 class="card-title">Produto</h5>
                 <p class="fw-bold text-success">R$ 899,90</p>
                 <button class="btn btn-primary"><i class="bi bi-cart-plus"></i> Comprar</button>
               </div>
