--- a/index.html
+++ b/index.html
@@ -57,13 +57,7 @@
                 <a class="nav-link" href="#">Promoções</a>
               </li>
             </ul>
-          </div>
-
-          <!-- CARRINHO + PESQUISA -->
-          <div class="d-flex align-items-center">
-            <a href="#" class="btn btn-outline-dark me-2">
-              <i class="bi bi-cart3"></i> Carrinho
-            </a>
+            <!-- Pesquisa -->
             <form class="d-flex" role="search">
               <input
                 class="form-control me-2"
@@ -71,12 +65,32 @@
                 placeholder="Buscar produtos..."
                 aria-label="Search"
               />
-              <button class="btn btn-outline-success" type="submit">
+              <button class="btn btn" type="submit">
                 <i class="bi bi-search"></i>
               </button>
             </form>
+          <!-- CARRINHO + AJUDA + Login -->
+
+           <div class="Carrinho-flex align-items-center">
+            <a href="#" class="btn  me-2">
+              <i class="bi bi-cart3"></i> 
+            </a>
+          </div>
+
+          <div class="d-flex align-items-center">
+            <a href="#" class="btn  me-2">
+              <i class="bi bi-globe2"></i>
+            </a>
+          </div>
+        
+         <div class="d-flex align-items-center">
+            <a href="#" class="btn  me-2">
+              <i class="bi bi-person-circle"></i> 
+            </a> 
           </div>
         </div>
+          </div>
+
       </nav>
     </header>
 
@@ -93,7 +107,7 @@
               <img src="images/bannerLJ2.png" class="d-block w-100" alt="Banner 2" />
             </div>
             <div class="carousel-item">
-              <img src="images/banner3.png" class="d-block w-100" alt="Banner 3" />
+              <img src="images/bannerLJ3.png" class="d-block w-100" alt="Banner 3" />
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselLoja" data-bs-slide="prev">
@@ -213,6 +227,7 @@
       </div>
 
     </div>
+ 
 
     <!-- CONTROLES -->
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselProdutos" data-bs-slide="prev">
@@ -222,7 +237,85 @@
       <span class="carousel-control-next-icon"></span>
     </button>
   </div>
-</section>
+      </section>
+
+
+<!-- CATEGORIAS -->
+      <section class="my-5">
+  <h2 class="text-center mb-4">CAtegorias</h2>
+<div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-inner">
+
+    <!-- Primeiro slide -->
+    <div class="carousel-item active">
+      <div class="row">
+        <div class="col-md-4">
+          <div class="card">
+            <div class="card-body text-center">Item 1</div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card">
+            <div class="card-body text-center">Item 2</div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card">
+            <div class="card-body text-center">Item 3</div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Segundo slide -->
+    <div class="carousel-item">
+      <div class="row">
+        <div class="col-md-4">
+          <div class="card">
+            <div class="card-body text-center">Item 4</div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card">
+            <div class="card-body text-center">Item 5</div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card">
+            <div class="card-body text-center">Item 6</div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+  <!-- Controles -->
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon"></span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+    <span class="carousel-control-next-icon"></span>
+  </button>
+</div>
+      </section>
+            <div class="cart-popup">
+
+        <div class="cart-header">
+
+          <p class="text">
+            Carrinho <span>(0 item)</span>
+          </p>
+
+          <button type="button" class="close-cart" data-close-cart="" data-ready="true">
+            <svg class="icon"><use xlink:href="#icon-close"></use></svg>
+          </button>
+
+        </div>
+          <p class="empty">
+              Nenhum produto encontrado.
+           </p>
+         </div>
     </main>
 
     <!-- RODAPÉ -->
