--- a/login.html
+++ b/login.html
@@ -26,28 +26,43 @@
           <div class="col-12 col-sm-8 col-md-6 m-auto">
             <div class="card bg-body-tertiary">
               <div class="card-body">
+                <!-- Remova o link -->
                 <div class="text-center">
-                  <a href="index.html">
-                    <img
-                      src="images/Leao logo.png"
-                      class="img-fluid"
-                      alt="Imagem centralizada"/>
+                  <img
+                    src="images/Leao logo.png"
+                    class="img-fluid"
+                    alt="Imagem centralizada"
+                  />
                 </div>
-                 <form>
-                    <input type="text" class="form-control py-2 mb-2" placeholder="Email" aria-label="Email">
-                    <input type="password" class="form-control py-2 mb-2" placeholder="Senha" aria-label="Senha">
 
-                <div class="d-flex justify-content-between align-items-center mt-3">
-                <button class="btn btn-outline-dark">Entrar</button>
-                <a href="#" class="nav-link text-primary p-0">Cadastre-se</a>
+                <form>
+                  <input
+                    type="text"
+                    class="form-control py-2 mb-2"
+                    placeholder="Email"
+                    aria-label="Email"
+                  />
+                  <input
+                    type="password"
+                    class="form-control py-2 mb-2"
+                    placeholder="Senha"
+                    aria-label="Senha"
+                  />
+
+                  <div
+                    class="d-flex justify-content-between align-items-center mt-3"
+                  >
+                    <button class="btn btn-outline-dark">Entrar</button>
+                    <a href="#" class="nav-link text-primary p-0"
+                      >Cadastre-se</a
+                    >
+                  </div>
+                </form>
+              </div>
             </div>
-          </form>
+          </div>
         </div>
       </div>
-    </div>
-  </div>
-</div>
-</section>
-</body>
+    </section>
+  </body>
 </html>
-
