--- a/login.html
+++ b/login.html
@@ -16,53 +16,22 @@
     <!-- CSS local -->
     <link rel="stylesheet" href="css/style.css" />
     <script src="js/bootstrap.bundle.min.js" defer></script>
-  </head>
 
+    <!-- TELA LOGIN -->
+  </head >
+<body >
   <!-- TELA LOGIN -->
-  <body class="bg-dark">
-    <section>
-      <div class="containerlogin mt-5 pt-5">
-        <div class="row">
-          <div class="col-12 col-sm-8 col-md-6 m-auto">
-            <div class="card bg-body-tertiary">
-              <div class="card-body">
-                <!-- Remova o link -->
-                <div class="text-center">
-                  <img
-                    src="images/Leao logo.png"
-                    class="img-fluid"
-                    alt="Imagem centralizada"
-                  />
-                </div>
-
-                <form>
-                  <input
-                    type="text"
-                    class="form-control py-2 mb-2"
-                    placeholder="Email"
-                    aria-label="Email"
-                  />
-                  <input
-                    type="password"
-                    class="form-control py-2 mb-2"
-                    placeholder="Senha"
-                    aria-label="Senha"
-                  />
-
-                  <div
-                    class="d-flex justify-content-between align-items-center mt-3"
-                  >
-                    <button class="btn btn-outline-dark">Entrar</button>
-                    <a href="#" class="nav-link text-primary p-0"
-                      >Cadastre-se</a
-                    >
-                  </div>
-                </form>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-  </body>
+    <div class="d-flex justify-content-center align-items-center vh-100 ">
+    <div class="card p-4 shadow" style="width: 400px;">
+    <h3 class="text-center mb-lg-0" ><img src="images/Leao logo.png" alt=""></h3>
+    <input type="text" class="form-control mb-2" placeholder="Email">
+    <input type="password" class="form-control mb-3" placeholder="Senha">
+    <button class="btn btn-outline-dark w-100">Entrar</button>
+    <div class="text-center mt-2">
+      <a href="#" class="text-primary">Cadastrar-se</a>
+    </div>
+  </div>
+</div>
+ </section>
+</body>
 </html>
