--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <!-- CABEÇALHO -->
     <header>
-      <nav class="navbar navbar-expand-lg bg-body-tertiary shadow-sm">
+      <nav class="navbar navbar-expand-lg bg-black shadow-sm">
         <div class="container-fluid">
           <!-- LOGO (IMAGEM) -->
           <a class="navbar-brand" href="#">
@@ -72,7 +72,7 @@
                 aria-label="Search"
               />
               <button class="btn btn" type="submit">
-                <i class="bi bi-search"></i>
+                <i class="bi bi-search fs-5"></i>
               </button>
             </form>
 
@@ -81,7 +81,7 @@
               <div class="cart-header">
                 <p class="text">Carrinho <span>(0 item)</span></p>
                 <button type="button" class="close-cart" id="closeCart">
-                  ✖
+                  <i class="bi bi-x"></i>
                 </button>
               </div>
               <p class="empty">Nenhum produto encontrado.</p>
@@ -89,20 +89,20 @@
             <!-- Div com ícone no lugar do botão -->
             <div class="Carrinho-flex align-items-center">
               <a href="#" id="openCart" class="btn me-2">
-                <i class="bi bi-cart3"></i>
+                <i class="bi bi-cart3 fs-5"></i>
               </a>
             </div>
 
 
           <div class="d-flex align-items-center">
             <a href="#" class="btn  me-2">
-              <i class="bi bi-globe2"></i>
+              <i class="bi bi-globe2 fs-5"></i>
             </a>
           </div>
         
           <div class="d-flex align-items-center">
          <a href="login.html" class="btn me-2">
-              <i class="bi bi-person-circle fs-4"></i>
+              <i class="bi bi-person-circle fs-5"></i>
             </a>
           </div>
         </div>
