--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
   <body>
     <!-- CABEÇALHO -->
     <header>
-      <nav class="navbar navbar-expand-lg bg-black shadow-sm">
+      <nav class="navbar navbar-expand-lg bg-black shadow-sm ">
         <div class="container-fluid">
           <!-- LOGO (IMAGEM) -->
           <a class="navbar-brand" href="#">
-            <img src="images/logo.png" alt="Logo Loja" width="120" />
+            <img src="images/LogoZentral.png" alt="Logo Loja" width="120" />
           </a>
 
           <!-- BOTÃO RESPONSIVO -->
@@ -43,12 +43,12 @@
 
           <!-- MENU CENTRALIZADO -->
           <div
-            class="collapse navbar-collapse justify-content-center"
+            class="collapse navbar-collapse justify-content-center "
             id="navbarContent"
           >
-            <ul class="navbar-nav mb-2 mb-lg-0">
+            <ul class="navbar-nav mb-2 mb-lg-0 ">
               <li class="nav-item">
-                <a class="nav-link active" href="#">Início</a>
+                <a class="nav-link active text-white" href="#">Início</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Masculino</a>
