--- a/login.html
+++ b/login.html
@@ -23,7 +23,7 @@
   <!-- TELA LOGIN -->
     <div class="d-flex justify-content-center align-items-center vh-100 ">
     <div class="card p-5 shadow" style="width: 400px;">
-    <h3 class="text-center mb-lg-0" ><img src="images/LogoZentralPreto.png" alt=""></h3>
+    <h3 class="text-center mb-lg-0" ><img src="images/OlhoZentral.png" alt=""></h3>
     <input type="text" class="form-control mb-2" placeholder="Email">
     <input type="password" class="form-control mb-3" placeholder="Senha">
     <button class="btn btn-outline-dark w-100">Entrar</button>
