--- a/login.html
+++ b/login.html
@@ -18,31 +18,34 @@
   <!-- TELA LOGIN -->
 </head>
 
-<body>
+<body class="body-cadastro">
   <!-- TELA LOGIN -->
-  <div class="d-flex justify-content-center align-items-center vh-100">
+  <div class="d-flex flex-column  justify-content- align-items-center vh-100 bg">
+    <!-- Logo em cima -->
+    <img src="images/OlhoZentral.png" width="300" alt="" class="mb-3">
 
-    <div class=" p-5 shadow " style="width: 400px; " >
-      <h3 class="text-center mb-lg-0"><img src="images/OlhoZentral.png" width="140" alt=""></h3>
-
-
+    <!-- Card -->
+    <div class="bg-white p-5 text-center" style="width: 400px; box-shadow: 0 4px 30px rgb(228, 224, 224);">
       <div class="input-group mb-2">
         <span class="input-group-text"><i class="bi bi-person"></i></span>
         <input type="text" class="form-control" placeholder="Email">
       </div>
-
       <div class="input-group mb-2">
         <span class="input-group-text"><i class="bi bi-lock"></i></span>
         <input type="password" class="form-control" placeholder="Senha">
       </div>
-
-      <button class="btn btn-outline-dark w-100 ">Entrar</button>
-      <div class=" d-flex justify-content-between mt-2">
-        <a href="#" class="text-primary">Cadastrar-se</a>
-        
-        <a href="#" class="text-primary"> Esqueceu senha?</a>
+      <button class="btn btn-outline-dark w-100">Entrar</button>
+      <div class="d-flex justify-content-between mt-2">
+        <a href="cadastro.html" class="text-primary">Cadastrar-se</a>
+        <a href="#" class="text-primary">Esqueceu senha?</a>
       </div>
     </div>
+  </div>
+
+  </div>
+  </div>
+
+  </div>
   </div>
   </section>
 </body>
