--- a/login.html
+++ b/login.html
@@ -1,39 +1,53 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="index.html" />
-    <title>Login</title>
 
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="index.html" />
+  <title>Login</title>
 
-    <!-- Bootstrap 5.3 -->
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <!-- CSS local -->
-    <link rel="stylesheet" href="css/style.css" />
-    <script src="js/bootstrap.bundle.min.js" defer></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
 
-    <!-- TELA LOGIN -->
-  </head >
-<body >
+  <!-- Bootstrap 5.3 -->
+  <link rel="stylesheet" href="css/bootstrap.min.css" />
+  <!-- CSS local -->
+  <link rel="stylesheet" href="css/style.css" />
+  <script src="js/bootstrap.bundle.min.js" defer></script>
+
   <!-- TELA LOGIN -->
-    <div class="d-flex justify-content-center align-items-center vh-100 ">
+</head>
 
-    <div class="card p-5 shadow" style="width: 400px;">
-    <h3 class="text-center mb-lg-0" ><img src="images/OlhoZentral.png" alt=""></h3>
+<body class="body-cadastro">
+  <!-- TELA LOGIN -->
+  <div class="d-flex flex-column  justify-content- align-items-center vh-100 bg">
+    <!-- Logo em cima -->
+    <img src="images/OlhoZentral.png" width="300" alt="" class="mb-3">
 
-    <input type="text" class="form-control mb-2" placeholder="Email">
-    <input type="password" class="form-control mb-3" placeholder="Senha">
-    <button class="btn btn-outline-dark w-100">Entrar</button>
-    <div class="text-center mt-2">
-      <a href="#" class="text-primary">Cadastrar-se</a>
+    <!-- Card -->
+    <div class="bg-white p-5 text-center" style="width: 400px; box-shadow: 0 4px 30px rgb(228, 224, 224);">
+      <div class="input-group mb-2">
+        <span class="input-group-text"><i class="bi bi-person"></i></span>
+        <input type="text" class="form-control" placeholder="Email">
+      </div>
+      <div class="input-group mb-2">
+        <span class="input-group-text"><i class="bi bi-lock"></i></span>
+        <input type="password" class="form-control" placeholder="Senha">
+      </div>
+      <button class="btn btn-outline-dark w-100">Entrar</button>
+      <div class="d-flex justify-content-between mt-2">
+        <a href="cadastro.html" class="text-primary">Cadastrar-se</a>
+        <a href="#" class="text-primary">Esqueceu senha?</a>
+      </div>
     </div>
   </div>
-</div>
- </section>
+
+  </div>
+  </div>
+
+  </div>
+  </div>
+  </section>
 </body>
+
 </html>
